# fall_engine

./: .gitignore  CMakeLists.txt  README.md  build.md  build.sh  flake.nix  install.ps1  install.sh
.cache/clangd/index/: commands.cpp.88DE0F14C3F605D2.idx  commands.cpp.F658809644B6BD7C.idx  commands.h.83309ACD12BD7A55.idx  commands.h.F97E73993E6394FB.idx  common.h.0FA07A7A09D9C549.idx  main.cpp.C9F9B05C5A37894C.idx  main.cpp.D5E4C27B4524ACAD.idx  pipeline.cpp.5ED940E0659DE006.idx  pipeline.cpp.8278CDD0528E8C10.idx  pipeline.h.042C87B43497F510.idx  pipeline.h.C16FA88B019645E7.idx  platform.cpp.2E81F2D340850707.idx  platform.cpp.59803B82CCC84516.idx  platform.h.00DEC1FDB56DD4D9.idx  platform.h.933EE3CABF83410D.idx  render.cpp.1A042DE016022AA6.idx  render.cpp.34066E3738921384.idx  render.cpp.DF55F55D421CE952.idx  render.h.5DDDE16D04195C61.idx  render.h.BC23A36819CC9246.idx  render.h.D503A16D999453D9.idx  swapchain.cpp.2B8BFE1409D053DA.idx  swapchain.cpp.810C72751B83E1EA.idx  swapchain.h.7971745EBD6BB2C8.idx  swapchain.h.A992BB0795236614.idx  sync.cpp.79F2EFA510491663.idx  sync.cpp.F93990ED1D583B4E.idx  sync.h.2A7D573FD7C27241.idx  sync.h.A9B2155BF339A749.idx  types.h.3B158886729805E8.idx  vulkan_context.cpp.26004DEC4B81C4AD.idx  vulkan_context.cpp.3B48B7AC11C45897.idx  vulkan_context.h.421E10FD7012CA09.idx  vulkan_context.h.5C771C8C52EEB89C.idx
source/: common.h  main.cpp  platform.cpp  platform.h  vulkan_context.cpp  vulkan_context.h
source/assets/: model.cpp  model.h
source/drivers/: buffer.cpp  commands.cpp  commands.h  pipeline.cpp  pipeline.h  render.cpp  render.h  swapchain.cpp  swapchain.h  sync.h
src/: camera.h  main.cpp  platform.cpp  platform.h  render.cpp  render.h  vulkan_context.cpp  vulkan_context.h
src/drivers/: commands.cpp  pipeline.h  render.cpp  render.h  sync.cpp  sync.h  types.h
src/drivers/shaders/: vert.glsl
